@@ -22,6 +22,7 @@ Release history for Devel-Isa-Explainer
  [Internals]
  - Highligher functions now receive all sub metadata directly as a hash, instead of being called with a list of binary
    flags.
+ - Parents of classes now recorded in internal data structures, but not yet exposed.
 
 0.002001 2016-05-19T14:07:12Z c167598
  [Documentation]
